// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-upload"
    >
      <input
        hidden=""
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            style="position: relative;"
          >
            <svg
              class="t-icon t-icon-upload t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
      <small
        class="t-upload__tips t-upload__small"
      >
        上传文件大小在 5M 以内
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`draggable.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      是否自动上传：
      <button
        class="t-switch"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
      <br />
    </div>
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          checked=""
          class="t-radio__former"
          readonly=""
          type="radio"
          value="file"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          文件拖拽上传
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
          value="image"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          图片拖拽上传
        </span>
      </label>
    </div>
    <br />
    <br />
    <div
      class="t-upload"
    >
      <input
        hidden=""
        type="file"
      />
      <div
        class="t-upload__dragger t-upload__dragger-center"
      >
        <div
          class="t-upload__trigger"
        >
          <div>
            <span
              class="t-upload__highlight"
            >
              点击上传
            </span>
            <span>
                /  拖拽到此区域
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`image.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="t-upload"
      >
        <input
          accept="image/*"
          hidden=""
          type="file"
        />
        <ul
          class="t-upload-card"
        >
          <li
            class="t-upload-card__item t-is--background"
          >
            <div
              class="t-upload-card-container t-upload-card__box"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <p
                class="t-upload__small"
              >
                点击上传图片
              </p>
            </div>
          </li>
        </ul>
        <small
          class="t-upload__tips t-upload__small"
        >
          请选择单张图片文件上传
        </small>
      </div>
    </div>
    <br />
    <br />
    <div>
      <div
        class="t-upload"
      >
        <input
          accept="image/*"
          hidden=""
          multiple=""
          type="file"
        />
        <ul
          class="t-upload-card"
        >
          <li
            class="t-upload-card__item t-is--background"
          >
            <div
              class="t-upload-card-container t-upload-card__box"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <p
                class="t-upload__small"
              >
                点击上传图片
              </p>
            </div>
          </li>
        </ul>
        <small
          class="t-upload__tips t-upload__small"
        >
          允许选择多张图片文件上传，最多只能上传 3 张图片
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
